CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( normlization )

SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_BUILD_TYPE Debug  )
set(CMAKE_CXX_STANDARD 11)




#增加Boost的依赖
find_package(Boost REQUIRED)

# 添加头文件和库文件
include_directories(
        ${Boost_INCLUDE_DIRS}
)
LINK_DIRECTORIES(
        ${Boost_LIBRARY_DIRS}
)



SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include )
LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib)
ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/src )
