CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( normlization )

SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_BUILD_TYPE Debug  )
set(CMAKE_CXX_STANDARD 11)


# 添加头文件和库文件
include_directories("D:/Program Files/boost_1_65_1")
set(Boost_LIBRARY_DIRS "D:/Program Files/boost_1_65_1/lib64-msvc-14.0")
LINK_DIRECTORIES(
        ${Boost_LIBRARY_DIRS}
)



SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include )
LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib)
ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/src )
